syntax="proto2";

package com.jiaoyan.protobuf;

option optimize_for=SPEED;
option java_package="com.jiaoyan.netty.protobufexample";
option java_outer_classname="DateInfo";

message MyMessage{
    enum DataType{
        PersonType=1;
        DogType=2;
        CatType=3;
    }
   required  DataType  data_type=1;

    oneof DataBody{
        Person person=2;
        Dog dog=3;
        Cat cat=4;
    }
}
message Person{
    optional string name=1;
    optional string age=2;
    optional string address=3;
}


message Dog{
    optional string name=1;
    optional string age=2;
}

message Cat{
    optional string name=1;
    optional string city=2;
}


